# gavel

./: .bazelignore  .bazelrc  .gitignore  .golangci.yml  .goreleaser.yaml  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  SECURITY.md  codecov.yml  glama.json  go.mod  go.sum  go.work  go.work.sum  install.sh
apps/cli/cmd/gavel/: BUILD.bazel  main.go
apps/cli/internal/app/: BUILD.bazel  root.go  root_test.go
apps/server/cmd/gavel-server/: BUILD.bazel  main.go  tenant_commands.go
apps/web/: BUILD.bazel  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tokens.json  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
apps/web/e2e/: auth.spec.ts  casefiles.spec.ts  fixtures.ts  gavelspaces.spec.ts  global-setup.ts  global-teardown.ts  projects.spec.ts  start-server.sh  tokens.spec.ts
apps/web/scripts/: generate-tokens.mjs
apps/web/src/: index.css
apps/web/src/app/: App.tsx  error-boundary.test.tsx  error-boundary.tsx  providers.test.tsx  providers.tsx  router.tsx
apps/web/src/app/layout/: nav-item.tsx  section-label.tsx  sidebar-nav.test.tsx  sidebar.tsx  use-collapsed.test.ts  use-collapsed.ts
apps/web/src/entities/casefile/: api.ts  mappers.test.ts  mappers.ts  model.ts
apps/web/src/entities/finding/: api.ts  mappers.test.ts  mappers.ts  model.ts
apps/web/src/entities/gavelspace/: api.ts  index.ts  mappers.ts  model.ts
apps/web/src/entities/pleading/: api.ts  mappers.ts  model.ts
apps/web/src/pages/: admin-users.test.tsx  admin-users.tsx  casefile-detail-findings.test.tsx  casefile-detail.tsx  casefile-diff.test.tsx  casefile-diff.tsx  design-system.test.tsx  design-system.tsx  gavelspace-detail-subnav.test.tsx  gavelspace-detail.tsx  gavelspaces.test.tsx  gavelspaces.tsx  home.test.tsx  home.tsx  legacy-casefiles-route.test.tsx  legacy-issues-route.test.tsx  legacy-pr-checks-route.test.tsx  login.test.tsx  login.tsx  not-found.test.tsx  not-found.tsx  pr-check-detail.test.tsx  pr-check-detail.tsx  profile-password.test.tsx  profile.test.tsx  profile.tsx  project-detail.test.tsx  project-detail.tsx  tokens-crud.test.tsx  tokens.tsx
apps/web/src/test/: msw-handlers.ts  msw-server.ts  render.tsx
core/application/casefile/classify/: BUILD.bazel  command.go  command_test.go  errors.go  fakes_test.go  handler.go  handler_test.go  result.go
core/application/casefile/classifyarch/: BUILD.bazel  command.go  errors.go  handler.go  handler_test.go  result.go
core/application/casefile/collectevidence/: BUILD.bazel  command.go  command_test.go  errors.go  executions_internal_test.go  handler.go  handler_test.go  ports.go  result.go
core/application/casefile/createcasefile/: BUILD.bazel  command.go  errors.go  handler.go  handler_internal_test.go  handler_test.go  option.go  result.go
core/application/casefile/evidencedto/: BUILD.bazel  architecture.go  coverage.go  dependency.go  errors.go  evidence.go  evidence_test.go  filecoverage.go  filecoverage_test.go  finding.go  helpers_test.go  language_stats.go  license.go  new_code_coverage.go  toolexecution.go  tracking.go  violation.go
core/application/casefile/finalize/: BUILD.bazel  command.go  command_test.go  counters.go  delta.go  errors.go  fakes_test.go  handler.go  handler_test.go  result.go
core/application/casefile/get/: BUILD.bazel  casefile_detail.go  errors.go  evidence_summary.go  fakes_test.go  finder.go  handler.go  handler_test.go  query.go  ruling_view.go
core/application/casefile/ingestcoverage/: BUILD.bazel  command.go  command_test.go  errors.go  fakes_test.go  handler.go  handler_internal_test.go  handler_test.go  parsed.go  parser.go  result.go
core/application/casefile/ingestevidence/: BUILD.bazel  command.go  errors.go  handler.go  handler_internal_test.go  handler_test.go  result.go
core/application/casefile/ingestfindings/: BUILD.bazel  command.go  command_test.go  errors.go  fakes_test.go  handler.go  handler_internal_test.go  handler_test.go  parsed.go  parser.go  result.go
core/application/casefile/ingestncc/: BUILD.bazel  command.go  errors.go  handler.go  handler_internal_test.go  handler_test.go  parser.go  result.go
core/application/casefile/list/: BUILD.bazel  casefile_summary.go  errors.go  fakes_test.go  finder.go  handler.go  handler_test.go  query.go  result.go
core/application/casefile/listfindings/: BUILD.bazel  errors.go  fakes_test.go  filters.go  finder.go  finding_view.go  handler.go  handler_test.go  query.go  result.go
core/application/casefile/submit/: BUILD.bazel  command.go  command_test.go  conversion_test.go  errors.go  fakes_test.go  handler.go  handler_test.go  result.go
core/application/gavelspace/get/: BUILD.bazel  errors.go  fakes_test.go  finder.go  gavelspace_detail.go  handler.go  handler_test.go  project_ref_view.go  query.go
core/application/gavelspace/list/: BUILD.bazel  errors.go  fakes_test.go  finder.go  gavelspace_summary.go  handler.go  handler_test.go  query.go  result.go
core/application/gavelspace/loadgavelspace/: BUILD.bazel  errors.go  finder.go  handler.go  handler_test.go  ports.go  query.go  result.go
examples/go-repo/: .bazelrc  .golangci.yml  MODULE.bazel  go.mod
examples/go-repo/.gavel/: architecture.yml  gavel.bazelrc  gavel.yaml
examples/python-repo/: .bazelrc  MODULE.bazel
examples/python-repo/.gavel/: architecture.yml  gavel.bazelrc  gavel.yaml
examples/python-repo/tests/: BUILD.bazel
examples/python-repo/tests/application/: test_place_order_handler.py
examples/python-repo/tests/domain/: test_money.py  test_order.py  test_payment.py
examples/rust-fullstack-repo/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/rust-fullstack-repo/.gavel/: architecture.yml  gavel.bazelrc  gavel.yaml
examples/rust-fullstack-repo/backend/: BUILD.bazel
examples/rust-fullstack-repo/backend/src/: lib.rs
examples/rust-fullstack-repo/frontend/: BUILD.bazel  copy-coverage.mjs  eslint.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
tools/clispec-gen/: BUILD.bazel  main.go  main_test.go
(+1279 files in other folders)
