load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/usegavel/gavel
# gazelle:exclude web
# gazelle:exclude tools/aspects
gazelle(name = "gazelle")

exports_files([
    ".gavel/gavel.yaml",
    "MODULE.bazel",
    "go.mod",
    "go.sum",
])

filegroup(
    name = "gavel_lint_config",
    srcs = glob(
        [
            ".golangci.yml",
            ".golangci.yaml",
            "ruff.toml",
            "pyproject.toml",
            ".bandit",
            "clippy.toml",
            ".clippy.toml",
            "eslint.config.*",
            ".eslintrc.*",
            ".gavel/architecture.yml",
        ],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)
