module(
    name = "gavel",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_java", version = "9.1.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "gazelle", version = "0.50.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "aspect_rules_ts", version = "3.8.8")
bazel_dep(name = "aspect_rules_esbuild", version = "0.25.1")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "gavel_tools", version = "0.1.0")
git_override(
    module_name = "gavel_tools",
    remote = "https://github.com/gavelcode/gavel-tools.git",
    commit = "c02d01a2ff9523511d83ddf3db9807a0a1f6db20",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(
    go_deps,
    "com_github_charmbracelet_huh",
    "com_github_charmbracelet_lipgloss",
    "com_github_fsnotify_fsnotify",
    "com_github_go_chi_chi_v5",
    "com_github_google_uuid",
    "com_github_jackc_pgx_v5",
    "com_github_mattn_go_isatty",
    "com_github_modelcontextprotocol_go_sdk",
    "com_github_oapi_codegen_runtime",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "com_github_testcontainers_testcontainers_go",
    "com_github_testcontainers_testcontainers_go_modules_postgres",
    "in_gopkg_yaml_v3",
    "org_golang_x_crypto",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.16.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//apps/web:pnpm-lock.yaml",
)
use_repo(npm, "npm")

include("//:.gavel/gavel.MODULE.bazel")
