load("@gavel_tools//macros:web.bzl", "web_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//apps/web:eslint/package_json.bzl", eslint_bin = "bin")
load("@npm//apps/web:tailwindcss/package_json.bzl", tailwind_bin = "bin")
load("@npm//apps/web:typescript/package_json.bzl", tsc_bin = "bin")

exports_files([
    "pnpm-lock.yaml",
    "package.json",
])

npm_link_all_packages(name = "node_modules")

web_project(
    name = "web",
    css_deps = [
        "tailwindcss",
        "@tailwindcss/forms",
        "autoprefixer",
        "postcss",
    ],
    entry_point = "src/main.tsx",
    esbuild_config = {
        "jsx": "automatic",
        "loader": {".css": "empty"},
        "define": {"import.meta.env.DEV": "false"},
    },
    eslint = eslint_bin,
    lint_deps = [
        "eslint",
        "@eslint/js",
        "eslint-plugin-react-hooks",
        "eslint-plugin-react-refresh",
        "typescript-eslint",
        "globals",
    ],
    server_visibility = ["//apps/server:__subpackages__"],
    tailwind = tailwind_bin,
    tsc = tsc_bin,
    tsconfig = "tsconfig.app.json",
    type_deps = [
        "typescript",
        "@types/node",
        "@types/prismjs",
        "@types/react",
        "@types/react-dom",
    ],
    runtime_deps = [
        "class-variance-authority",
        "clsx",
        "lucide-react",
        "prismjs",
        "react",
        "react-dom",
        "react-router-dom",
        "recharts",
        "tailwind-merge",
        "@tanstack/react-query",
        "@tanstack/react-table",
    ],
)
