module(
    name = "go-repo",
    version = "0.0.0",
)

bazel_dep(name = "gavel_tools", version = "0.1.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

include("//:.gavel/gavel.MODULE.bazel")
