module(
    name = "rust-fullstack-repo",
    version = "0.0.0",
)

bazel_dep(name = "gavel_tools", version = "0.3.5")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "aspect_rules_ts", version = "3.8.8")
bazel_dep(name = "rules_nodejs", version = "6.7.4")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.16.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", isolate = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//frontend:pnpm-lock.yaml",
)
use_repo(npm, "npm")

include("//:.gavel/gavel.MODULE.bazel")
