load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "clispec-gen_lib",
    srcs = ["main.go"],
    importpath = "github.com/usegavel/gavel/tools/clispec-gen",
    visibility = ["//visibility:private"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_binary(
    name = "clispec-gen",
    embed = [":clispec-gen_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "clispec-gen_test",
    srcs = ["main_test.go"],
    embed = [":clispec-gen_lib"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
