load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//frontend:vitest/package_json.bzl", vitest_bin = "bin")

npm_link_all_packages(name = "node_modules")

js_library(
    name = "frontend",
    srcs = glob(["src/**/*.ts", "src/**/*.tsx"]),
    visibility = ["//visibility:public"],
)

vitest_bin.vitest_test(
    name = "frontend_test",
    args = [
        "run",
        "--reporter=default",
        "--coverage",
    ],
    chdir = package_name(),
    data = [
        ":node_modules/vitest",
        ":node_modules/@vitest/coverage-v8",
        ":node_modules/@testing-library/react",
        ":node_modules/@testing-library/jest-dom",
        ":node_modules/jsdom",
        ":node_modules/react",
        ":node_modules/react-dom",
        "vitest.config.ts",
        "copy-coverage.mjs",
    ] + glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
)
