load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "gavel-server",
    data = ["//apps/web"],
    embed = [":gavel-server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "gavel-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/usegavel/gavel/apps/server/cmd/gavel-server",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/server/internal/api/v1",
        "//apps/server/internal/platform/config",
        "//apps/server/internal/platform/frontend",
        "//apps/server/internal/platform/spa",
        "//core/application/casefile/classify",
        "//core/application/casefile/createcasefile",
        "//core/application/casefile/finalize",
        "//core/application/casefile/get",
        "//core/application/casefile/ingestevidence",
        "//core/application/casefile/judge",
        "//core/application/casefile/list",
        "//core/application/casefile/listfindings",
        "//core/application/gavelspace/create",
        "//core/application/gavelspace/get",
        "//core/application/gavelspace/list",
        "//core/application/gavelspace/registerproject",
        "//core/application/gavelspace/removeproject",
        "//core/application/iam/changepassword",
        "//core/application/iam/createuser",
        "//core/application/iam/issuetoken",
        "//core/application/iam/listmytokens",
        "//core/application/iam/login",
        "//core/application/iam/logout",
        "//core/application/iam/resolveprincipal",
        "//core/application/iam/revoketoken",
        "//core/application/pleading/file",
        "//core/application/pleading/get",
        "//core/application/pleading/list",
        "//core/application/pleading/resolve",
        "//core/application/project/create",
        "//core/application/project/getbaseline",
        "//core/application/project/getbykey",
        "//core/application/project/list",
        "//core/application/project/updatelanguages",
        "//core/application/project/updatequalitygate",
        "//core/application/supporting/search",
        "//core/infrastructure/casefile/postgres",
        "//core/infrastructure/gavelspace/postgres",
        "//core/infrastructure/iam/argon2",
        "//core/infrastructure/iam/crypto",
        "//core/infrastructure/iam/postgres",
        "//core/infrastructure/platform/database",
        "//core/infrastructure/platform/sourceblob",
        "//core/infrastructure/pleading/postgres",
        "//core/infrastructure/project/postgres",
        "//core/infrastructure/supporting/search",
        "//core/userinterface/api/v1/server/casefile",
        "//core/userinterface/api/v1/server/gavelspace",
        "//core/userinterface/api/v1/server/httpx/auth",
        "//core/userinterface/api/v1/server/iam",
        "//core/userinterface/api/v1/server/ops",
        "//core/userinterface/api/v1/server/pleading",
        "//core/userinterface/api/v1/server/project",
        "//core/userinterface/api/v1/server/supporting/search",
        "//core/userinterface/api/v1/server/supporting/source",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_spf13_cobra//:cobra",
    ],
)
