load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "classify",
    srcs = [
        "command.go",
        "errors.go",
        "handler.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/classify",
    visibility = ["//visibility:public"],
    deps = [
        "//core/application/casefile/evidencedto",
        "//core/domain/casefile/model/evidence/finding",
        "//core/domain/casefile/model/tracking",
        "//core/domain/casefile/service",
        "//core/domain/project/model",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "classify_test",
    srcs = [
        "command_test.go",
        "fakes_test.go",
        "handler_test.go",
    ],
    deps = [
        ":classify",
        "//core/domain/casefile/model",
        "//core/domain/casefile/model/evidence/finding",
        "//core/domain/iam/model/tenant",
        "//core/domain/project/model",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
