load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "classifyarch",
    srcs = [
        "command.go",
        "errors.go",
        "handler.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/classifyarch",
    visibility = ["//visibility:public"],
    deps = [
        "//core/domain/casefile/model/tracking",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "classifyarch_test",
    srcs = ["handler_test.go"],
    deps = [
        ":classifyarch",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
