load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "collectevidence",
    srcs = [
        "command.go",
        "errors.go",
        "handler.go",
        "ports.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/collectevidence",
    visibility = ["//visibility:public"],
    deps = [
        "//core/application/casefile/classifyarch",
        "//core/application/casefile/evidencedto",
        "//core/application/casefile/ingestcoverage",
        "//core/application/casefile/ingestfindings",
        "//core/application/casefile/ingestncc",
        "//core/domain/casefile/model/evidence",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "collectevidence_test",
    srcs = [
        "command_test.go",
        "executions_internal_test.go",
        "handler_test.go",
    ],
    embed = [":collectevidence"],
    deps = [
        "//core/application/casefile/classifyarch",
        "//core/application/casefile/evidencedto",
        "//core/application/casefile/ingestcoverage",
        "//core/application/casefile/ingestfindings",
        "//core/application/casefile/ingestncc",
        "//core/infrastructure/casefile/lcov",
        "//core/infrastructure/casefile/sarif",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
