load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "createcasefile",
    srcs = [
        "command.go",
        "errors.go",
        "handler.go",
        "option.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/createcasefile",
    visibility = ["//visibility:public"],
    deps = [
        "//core/application/shared/event",
        "//core/domain/casefile/model",
        "//core/domain/casefile/service",
        "//core/domain/project/model",
        "//core/domain/project/service",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "createcasefile_test",
    srcs = [
        "handler_internal_test.go",
        "handler_test.go",
    ],
    embed = [":createcasefile"],
    deps = [
        "//core/domain/casefile/model",
        "//core/domain/casefile/model/evidence/finding",
        "//core/domain/project/model",
        "//core/infrastructure/casefile/memory",
        "//core/infrastructure/project/memory",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
