load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "finalize",
    srcs = [
        "command.go",
        "counters.go",
        "delta.go",
        "errors.go",
        "handler.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/finalize",
    visibility = ["//visibility:public"],
    deps = [
        "//core/application/casefile/classify",
        "//core/application/casefile/evidencedto",
        "//core/application/casefile/judge",
        "//core/application/shared/event",
        "//core/domain/casefile/model",
        "//core/domain/casefile/model/evidence",
        "//core/domain/casefile/model/evidence/architecture",
        "//core/domain/casefile/model/evidence/coverage",
        "//core/domain/casefile/model/evidence/finding",
        "//core/domain/casefile/model/tracking",
        "//core/domain/casefile/model/verdict",
        "//core/domain/casefile/service",
        "//core/domain/project/model",
        "//core/domain/project/service",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "finalize_test",
    srcs = [
        "command_test.go",
        "fakes_test.go",
        "handler_test.go",
    ],
    deps = [
        ":finalize",
        "//core/application/casefile/classify",
        "//core/application/casefile/judge",
        "//core/domain/casefile/model",
        "//core/domain/casefile/model/evidence",
        "//core/domain/casefile/model/evidence/architecture",
        "//core/domain/casefile/model/evidence/coverage",
        "//core/domain/casefile/model/evidence/finding",
        "//core/domain/iam/model/tenant",
        "//core/domain/project/model",
        "//core/domain/project/model/qualitygate",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
