load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ingestcoverage",
    srcs = [
        "command.go",
        "errors.go",
        "handler.go",
        "parsed.go",
        "parser.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/ingestcoverage",
    visibility = ["//visibility:public"],
    deps = [
        "//core/application/casefile/evidencedto",
        "//core/domain/casefile/model/evidence",
        "//core/domain/casefile/model/evidence/coverage",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "ingestcoverage_test",
    srcs = [
        "command_test.go",
        "fakes_test.go",
        "handler_internal_test.go",
        "handler_test.go",
    ],
    embed = [":ingestcoverage"],
    deps = [
        "//core/application/casefile/evidencedto",
        "//core/domain/casefile/model/evidence",
        "//core/domain/casefile/model/evidence/coverage",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
