load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ingestevidence",
    srcs = [
        "command.go",
        "errors.go",
        "handler.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/ingestevidence",
    visibility = ["//visibility:public"],
    deps = [
        "//core/application/casefile/evidencedto",
        "//core/application/shared/event",
        "//core/domain/casefile/model",
        "//core/domain/casefile/service",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "ingestevidence_test",
    srcs = [
        "handler_internal_test.go",
        "handler_test.go",
    ],
    embed = [":ingestevidence"],
    deps = [
        "//core/application/casefile/createcasefile",
        "//core/application/casefile/evidencedto",
        "//core/domain/casefile/model",
        "//core/domain/casefile/model/evidence/finding",
        "//core/domain/iam/model/tenant",
        "//core/domain/project/model",
        "//core/domain/project/model/qualitygate",
        "//core/infrastructure/casefile/memory",
        "//core/infrastructure/project/memory",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
