load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ingestfindings",
    srcs = [
        "command.go",
        "errors.go",
        "handler.go",
        "parsed.go",
        "parser.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/ingestfindings",
    visibility = ["//visibility:public"],
    deps = [
        "//core/application/casefile/evidencedto",
        "//core/domain/casefile/model/evidence",
        "//core/domain/casefile/model/evidence/finding",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "ingestfindings_test",
    srcs = [
        "command_test.go",
        "fakes_test.go",
        "handler_internal_test.go",
        "handler_test.go",
    ],
    embed = [":ingestfindings"],
    deps = [
        "//core/domain/casefile/model/evidence",
        "//core/domain/casefile/model/evidence/finding",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
