load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ingestncc",
    srcs = [
        "command.go",
        "errors.go",
        "handler.go",
        "parser.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/ingestncc",
    visibility = ["//visibility:public"],
    deps = [
        "//core/application/casefile/evidencedto",
        "//core/domain/casefile/model/evidence/coverage",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "ingestncc_test",
    srcs = [
        "handler_internal_test.go",
        "handler_test.go",
    ],
    embed = [":ingestncc"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
