load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "list",
    srcs = [
        "casefile_summary.go",
        "errors.go",
        "finder.go",
        "handler.go",
        "query.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/list",
    visibility = ["//visibility:public"],
    deps = [
        "//core/domain/iam/model/tenant",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "list_test",
    srcs = [
        "fakes_test.go",
        "handler_test.go",
    ],
    deps = [
        ":list",
        "//core/domain/iam/model/tenant",
        "//core/domain/shared/failure",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
