load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "listfindings",
    srcs = [
        "errors.go",
        "filters.go",
        "finder.go",
        "finding_view.go",
        "handler.go",
        "query.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/listfindings",
    visibility = ["//visibility:public"],
    deps = ["//core/domain/shared/failure"],
)

go_test(
    name = "listfindings_test",
    srcs = [
        "fakes_test.go",
        "handler_test.go",
    ],
    deps = [
        ":listfindings",
        "//core/domain/shared/failure",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
