load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "submit",
    srcs = [
        "command.go",
        "errors.go",
        "handler.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/casefile/submit",
    visibility = ["//visibility:public"],
    deps = [
        "//core/application/casefile/createcasefile",
        "//core/application/casefile/evidencedto",
        "//core/application/casefile/finalize",
        "//core/application/casefile/ingestevidence",
        "//core/application/casefile/judge",
        "//core/application/shared/event",
        "//core/domain/project/model",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "submit_test",
    srcs = [
        "command_test.go",
        "conversion_test.go",
        "fakes_test.go",
        "handler_test.go",
    ],
    embed = [":submit"],
    deps = [
        "//core/application/casefile/classify",
        "//core/application/casefile/createcasefile",
        "//core/application/casefile/evidencedto",
        "//core/application/casefile/finalize",
        "//core/application/casefile/ingestevidence",
        "//core/application/casefile/judge",
        "//core/domain/casefile/model",
        "//core/domain/casefile/model/evidence/finding",
        "//core/domain/project/model",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
