load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "get",
    srcs = [
        "errors.go",
        "finder.go",
        "gavelspace_detail.go",
        "handler.go",
        "project_ref_view.go",
        "query.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/gavelspace/get",
    visibility = ["//visibility:public"],
    deps = ["//core/domain/shared/failure"],
)

go_test(
    name = "get_test",
    srcs = [
        "fakes_test.go",
        "handler_test.go",
    ],
    deps = [
        ":get",
        "//core/domain/shared/failure",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
