load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "loadgavelspace",
    srcs = [
        "errors.go",
        "finder.go",
        "handler.go",
        "ports.go",
        "query.go",
        "result.go",
    ],
    importpath = "github.com/usegavel/gavel/core/application/gavelspace/loadgavelspace",
    visibility = ["//visibility:public"],
    deps = [
        "//core/domain/gavelspace/model",
        "//core/domain/project/model",
        "//core/domain/project/model/archpolicy",
        "//core/domain/shared/failure",
    ],
)

go_test(
    name = "loadgavelspace_test",
    srcs = ["handler_test.go"],
    deps = [
        ":loadgavelspace",
        "//core/domain/gavelspace/model",
        "//core/domain/project/model",
        "//core/domain/project/model/archpolicy",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
